--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/AMiggel/recetario-interactivo#readme",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "cloudinary": "^1.9.1",
     "express": "^4.16.2",
     "mongoose": "^4.12.4"
   }
